--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -1,13 +1,12 @@
-body {
-
+body
+{
     color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
-
 
 #cabecera
 {
@@ -19,15 +18,6 @@ body {
     padding: 0.5em;
 }
 
-#container{
-
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #DDD;
-    margin: 0 auto;
-}
-
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -35,7 +25,20 @@ body {
     font-size: 0.8em;
 }
 
-#container h1{
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
 
+#container h1
+{
     font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
